--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Safari by Vitorlás Devs</title>
   <script type="module" src="/src/main.ts" defer></script>
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
