--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
   <link rel="stylesheet" href="/src/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Safari by Vitorlás Devs</title>
-  <script type="module" src="/src/main.ts" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       overflow: hidden;
+      font-family: 'Ubuntu', sans-serif;
+      user-select: none;
     }
   </style>
+  <script type="module" src="/src/main.ts" defer></script>
 </head>
 
 <body>
