--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Safari by Vitorlás Devs</title>
 
-    <link rel="icon" type="image/webp" href="/src/resources/brand/logo.webp" />
+    <link rel="icon" type="image/webp" href="/resources/brand/logo.webp" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
